# sherpa-ncnn

./: .gitattributes  .gitignore  CMakeLists.txt  build-aarch64-linux-gnu-10-3.sh  build-aarch64-linux-gnu-3568.sh  build-aarch64-linux-gnu-6.3.sh  build-aarch64-linux-gnu-arm-star.sh  build-aarch64-linux-gnu-debug.sh  build-aarch64-linux-gnu.sh  build-android-arm64-v8a-with-vulkan.sh  build-android-arm64-v8a.sh  build-android-armv7-eabi.sh  build-arm-linux-gnueabihf.sh
audio_test/: Makefile  appService  audio_sdk.h  audio_test  audio_test.cpp  libtinyalsa.so.2.0.0  pcm_save  readme.txt
c-api-examples/: CMakeLists.txt  decode-file-asr-api.c  decode-file-c-api.c  decode-file-c-asr-api.c  recog_demo.cpp
cmake/: kaldi-native-fbank.cmake  ncnn.cmake
cpu_info/: get_cpu_info.cc  get_cpu_info.h  test_main.cc
docs/: authorization.md  endpoint_readme.html  endpoint_readme.md
scripts/: convert_tokens.py  merge_all_files.sh  merge_six_2_one_file.cc  sign_folder.sh
sherpa-ncnn/c-api/: CMakeLists.txt  asr_api.h  asr_api_impl.cc  c-api-internal.cc  c-api-internal.h  c-api.cc  c-api.h  get_hardware_info.cc  tokens_file_larger.h  version.h.in
sherpa-ncnn/csrc/: conv-emformer-model.cc  lstm-model.cc  model.cc  model.h  modified-beam-search-decoder.cc  modified-beam-search-decoder.h  recognizer.cc  symbol-table.cc  symbol-table.h  zipformer-model.cc
toolchains/: aarch64-linux-gnu-3568.toolchain.cmake  aarch64-linux-gnu-sgmstar.cmake  aarch64-linux-gnu.toolchain.cmake  arm-linux-gnueabihf.toolchain.cmake
